name:           snap-heist-splices
version:        0.1
synopsis:       A melange of Heist splices for use in snap applications
description:    This is a temporary collection of code implementing Heist splices that I
                think are generally useful.  There is a good chance we'll end up merging them
                into Snap or some other project in the future, but they're here for now.
license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley
maintainer:     snap@snapframework.com
build-type:     Simple
cabal-version:  >= 1.6
homepage:       http://snapframework.com/
category:       Web

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Heist.Helpers,
    Snap.Heist.Splices

  build-depends:
    base >= 4,
    bytestring >= 0.9 && < 0.10,
    containers >= 0.3 && < 0.5,
    heist >= 0.5 && < 0.6,
    mtl >= 2.0 && < 2.1,
    snap >= 0.5 && < 0.6,
    snap-auth >= 0.1 && < 0.2,
    snap-core >= 0.4 && < 0.6,
    snap-extension-mongodb >= 0.3 && < 0.5,
    text >= 0.11 && < 0.12,
    transformers >= 0.2 && < 0.3,
    xmlhtml >= 0.1 && < 0.2

  ghc-prof-options: -prof -auto-all

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2

source-repository head
  type:     git
  location: http://github.com/mightybyte/snap-heist-splices
